feat: add boot light configuration with customizable settings

--- a/vrc-switch-base.yml
+++ b/vrc-switch-base.yml
@@ -2,6 +2,28 @@
 # 功能：定义 VRC-MIRROR 项目的所有硬件组件。
 # 包含传感器、开关、灯带和外部按钮的完整配置。
 
+# Description: Turns on a light with specified settings on boot.
+
+substitutions:
+  # 定义可被主文件覆盖的默认值
+  boot_light_id: ws2812b_light
+  boot_light_brightness: "40%"
+  boot_light_red: "1.0"
+  boot_light_green: "1.0"
+  boot_light_blue: "1.0"
+
+esphome:
+  on_boot:
+    # 使用较低的优先级(-10)确保在网络连接等核心服务之后执行
+    - priority: -10
+      then:
+        - light.turn_on:
+            id: !sub boot_light_id
+            brightness: !sub boot_light_brightness
+            red: !sub boot_light_red
+            green: !sub boot_light_green
+            blue: !sub boot_light_blue
+            
 # --- 传感器部分 ---
 sensor:
   # 1. 电池电压检测 (PIN0)
