fix: improve comments in example

--- a/vrc-switch-example.yml
+++ b/vrc-switch-example.yml
@@ -1,4 +1,5 @@
-#任选下面的配置之一加入 HA 中生成的默认配置即可
+#任选下面的配置之一，加入 HA 中生成的默认配置开头即可
+#先引入 packages 可以保证 packages 中的内容可以被后续的同种配置覆盖
 
 # Example1 - 调试使用 每次拉取最新的配置
 packages:
